Improve Swagger filtering (#7)
